# MCP-Agent-Maestro

./: .cspell.json  .dockerignore  .env.example  .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mcp.json  package.json  pyproject.toml  pytest.ini  setup.cfg  test_postgres_setup.py
.github/: dependabot.yml
.github/workflows/: README-TESTING.md  WORKFLOWS.md  deploy-check.yml  docker.yml  docs.yml  lint.yml  mutation-testing.yml  npm-publish.yml  release.yml  security.yml  test-local.yml  tests.yml
agent_mcp/: __init__.py  __main__.py  cli.py  cli_setup.py
agent_mcp/agents/: __init__.py  assessment_agent.py  pydanticai_orchestrator.py  pydanticai_rag_agent.py  pydanticai_task_agent.py
agent_mcp/api/: mcp_setup.py  models.py  prompts.py
agent_mcp/app/: decorators.py  health.py  main_app.py  openapi.py  responses.py  server_lifecycle.py  websocket.py
agent_mcp/core/: config.py  settings.py
agent_mcp/dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json
agent_mcp/db/: __init__.py  cache.py  connection_factory.py  postgres_connection.py  postgres_schema.py  write_queue.py
agent_mcp/features/: claude_session_monitor.py
agent_mcp/models/: __init__.py  task.py
agent_mcp/prompts/: __init__.py  storage.py
agent_mcp/security/: __init__.py  cli.py  models.py  monitor.py  patterns.py  poison_detector.py  sanitizer.py
agent_mcp/tools/: __init__.py  admin_tools.py  agent_communication_tools.py  file_metadata_tools.py  project_context_tools.py  pydanticai_tools.py  rag_tools.py  registry.py  task_tools.py
agent_mcp/tui/: colors.py  display.py  simple_display.py
agent_mcp/utils/: async_utils.py  error_handlers.py  metrics.py  project_utils.py  structured_logging.py  worktree_utils.py
config/: README.md  mutmut_config.py
docs/: AGENTS.md  AGENT_TYPES_EXPLAINED.md  ARCHITECTURE.md  ASSESSMENT_AGENT_GUIDE.md  CURSOR_AI_ORCHESTRATION.md  CURSOR_AUTO_MODE_AND_AI_PROVIDERS.md  CURSOR_INTEGRATION_GUIDE.md  CURSOR_LOCAL_VS_CLOUD_AGENTS.md  DEPLOYMENT.md  DOCKER_SETUP.md  FAQ.md  HOW_TO_USE_PYDANTICAI_AGENTS.md  INTEGRATION_GUIDE.md  LOCAL_EMBEDDINGS_GUIDE.md  MCP_CLIENT_COMPATIBILITY.md  MCP_SETUP_CURSOR_VSCODE.md  OLLAMA_AUTO_DETECTION.md  WHAT_PYDANTICAI_AGENTS_DO.md  getting-started.md
docs/archive/: CHANGES_REVIEW.md  CODE_REVIEW_FEEDBACK.md  DESIGN_EVOLUTION_ANALYSIS.md  FINAL_REVIEW.md  HOW_IT_WORKS_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  (+22 more)
tests/: README.md  __init__.py  conftest.py  test_api_models_hypothesis.py  test_exceptions.py  test_integration_workflows.py  test_mcp_setup.py  test_prompt_import_export.py  test_pydanticai_agents.py  test_rag_hypothesis.py  test_rag_memory_tracker.py  test_rag_personalization.py  test_route_decorators.py  test_security_endpoints.py  test_security_hypothesis.py  test_settings.py  test_settings_validation.py  test_task_history.py  test_task_models.py  test_task_operations.py  test_toon_serialization.py  test_websocket.py
(+93 files in other folders)
